Fixes in temporal resolution for non-dynamic models and scale overriding
Change-Id: I7d3674950f14edc75472c62aa24ae6e5a826de77